[tool.poetry]
name = "balance"
version = "0.1.0"
description = ""
authors = ["ikhabibullin <mailofilyas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
