[tool.poetry]
name = "balance"
version = "0.1.0"
description = ""
authors = ["ikhabibullin <mailofilyas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
celery = "^5.2.7"
redis = "^4.4.2"
flower = "^1.2.0"
certifi = "^2022.12.7"
asyncpg = "^0.27.0"
SQLAlchemy = "^2.0.0"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
autoflake = "^2.0.0"
flake8 = "^6.0.0"
pytest = "^7.2.1"
httpx = "^0.23.3"
pytest-asyncio = "^0.20.3"

[tool.black]
line-length = 120
skip-string-normalization = 1

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
